<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".SignInActivity"
    android:id="@+id/signInActivity"
    android:background="@color/blue1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">

            <ImageView
                android:layout_width="191dp"
                android:layout_height="91dp"
                android:id="@+id/imageView8"
                android:layout_gravity="center"
                android:src="@drawable/sugar_mole" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Facebook"
                android:id="@+id/button"
                android:background="@color/facebook_blue"
                android:textColor="@color/white"
                android:layout_weight="50" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Google"
                android:id="@+id/button2"
                android:background="@color/google_red"
                android:textColor="@color/white"
                android:layout_weight="50" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subscribe_by_mail"
                android:id="@+id/textView3"
                android:gravity="center"
                android:layout_gravity="right|bottom" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:layout_weight="10">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:id="@+id/imageView"
                android:src="@drawable/new_post_100"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:background="@null"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="10">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:id="@+id/imageView2"
                android:src="@drawable/lock_2_100_grey"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:background="@null"
                android:hint="@string/password"
                android:paddingLeft="15dp"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_weight="10">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:id="@+id/imageView3"
                android:src="@drawable/lock_2_100_grey"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:paddingLeft="15dp"
                android:textSize="16dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subscribe"
                android:id="@+id/button3"
                android:textColor="@color/white"
                android:background="@color/blue2" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_subscribed"
                android:id="@+id/textView4"
                android:gravity="bottom|right"
                android:layout_weight="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/connection"
                android:id="@+id/textView5"
                android:textColor="@color/blue2"
                android:layout_weight="50"
                android:gravity="left|bottom"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password_forgotten"
                android:id="@+id/textView6"
                android:gravity="center"
                android:textColor="@color/blue2" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
